fix z-index inconsistency with javascript injected class

--- a/stylesheets/3-components/_carousel.scss
+++ b/stylesheets/3-components/_carousel.scss
@@ -2,6 +2,9 @@
 @use '../1-utilities/mixins' as m;
 @use "sass:map";
 
+.columns.overlayed {
+  z-index: 10;
+}
 .columns .overlay {
   position: fixed;
   right: 9999px;
@@ -76,7 +79,7 @@
   bottom: 0;
   left: 0;
   right: 0;
-  z-index: 4;
+  z-index: 1;
   display: flex;
   flex-direction: row;
   align-items: center;
